--- a/index.html
+++ b/index.html
@@ -22,40 +22,6 @@
     <meta property="twitter:title" content="MindTree | Heart of Tai Po">
     <meta property="twitter:description" content="A safe space for Tai Po residents. 24/7 AI listening, volunteer matching, and community blessings.">
     
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              slate: {
-                850: '#1e293b',
-                950: '#020617',
-              }
-            },
-            animation: {
-              float: 'float 50s linear infinite',
-              'fade-in': 'fade-in 0.3s ease-out forwards',
-            },
-            keyframes: {
-              float: {
-                '0%': { transform: 'translateY(100%) translateX(0)', opacity: '0' },
-                '5%': { opacity: '0.9' },
-                '50%': { transform: 'translateY(-50vh) translateX(20px)', opacity: '0.9' },
-                '90%': { opacity: '0.9' },
-                '100%': { transform: 'translateY(-120vh) translateX(-20px)', opacity: '0' },
-              },
-              'fade-in': {
-                '0%': { opacity: '0', transform: 'translateY(10px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              }
-            }
-          }
-        }
-      }
-    </script>
-
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+HK:wght@400;500;700&display=swap');
       
@@ -71,20 +37,17 @@
       /* Hide scrollbar */
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
-
-      /* Fallback if Tailwind doesn't load immediately */
-      #root { display: block; opacity: 1; }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
